fixing header on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,3 +32,7 @@ body {
 .animate-marquee {
   animation: marquee 20s linear infinite;
 }
+
+html {
+  scroll-behavior: smooth;
+}
